--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     background-color: white;
     position: fixed;
-    height: 70px;
+    height: 8vh;
     z-index: 5;
     scroll-behavior: smooth;
 }
@@ -29,7 +29,7 @@ body {
     padding: 10px;
     margin-top: 10px;
     color: black;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 /*menu hover*/
@@ -38,6 +38,7 @@ body {
     border-bottom-width: 5px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
+    transition: 0.3s;
 }
 
 .headSlides {
@@ -224,8 +225,22 @@ h1 {
     margin: 20% auto;
     background-color: white;
     cursor: pointer;
+    animation: side-to-side 3s ease-in-out;
     /*background-image: linear-gradient(to right, red, orange);*/
     /*opacity: 0.75;*/
+}
+
+@keyframes side-to-side {
+    0% {
+        transform: translateX(0%);
+    }
+
+    66% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
 }
 
 .header2 {
@@ -233,7 +248,7 @@ h1 {
     border-radius: 5px;
     box-shadow: 1px 1px 20px lightgrey;
     margin: 0 auto;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     padding: 40px;
     width: 25%;
     background-image: linear-gradient(to right, red, yellow); /*colour gradient*/
@@ -274,6 +289,7 @@ h3 {
     color: white;
     background-color: orangered;
     border: 2px solid black;
+    transition: 1s;
 }
 
 .intro {
@@ -287,6 +303,10 @@ h3 {
     width: 45%;
     height: 100%;
     border-radius: 3%;
+}
+
+.headerImg:hover {
+    box-shadow: 2px 2px 20px orangered;
 }
 
   p, .classBox {
@@ -303,17 +323,52 @@ h3 {
 }
 
 .danceStyle {
-    flex-basis: 33%;
+    flex-basis: 47%;
+    margin: 10px;
+    height: 40vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px;
+}
+
+.danceStyle:hover {
+    box-shadow: 2px 2px 20px orangered;
 }
 
 .classBox {
-    border: 1px solid grey;
+    /*border: 1px solid grey;*/
     border-radius: 5px;
     margin: 5%;
     padding: 5%;
     text-align: center;
-    background-image: linear-gradient(to left, red, yellow);
-    box-shadow: 3px 3px 3px grey;
+    /*background-image: linear-gradient(to left, red, yellow);
+    box-shadow: 3px 3px 3px grey;*/
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.danceStyle1 {
+    background-image: url(Images/slide1.jpg);
+}
+
+.danceStyle2 {
+    background-image: url(Images/slide2.jpg);
+}
+
+.danceStyle3 {
+    background-image: url(Images/slide3.jpg);
+}
+
+.danceStyle4 {
+    background-image: url(Images/slide4.jpg);
+}
+
+.danceStyle5 {
+    background-image: url(Images/slide5.jpg);
+}
+
+.danceStyle6 {
+    background-image: url(Images/slide6.jpg);
 }
 
 /*GALLERY*/
@@ -387,7 +442,7 @@ hr {
     border: 2px solid lightgrey;
     border-radius: 2%;
     box-shadow: 5px 5px 10px grey;
-    margin: 5% 2% 5% 2%;
+    margin: 0 2% 5% 2%;
     padding: 2% 2% 5% 2%;
     text-align: center;
     width: 41%;
@@ -398,6 +453,12 @@ hr {
     color: red;
 }
 
+.contactDetailsIcons {
+    margin: 7% 0;
+    padding: 5px;
+    transform: scale(1.5, 1.5);
+}
+
 
 /*SOCIALS*/
 
@@ -405,6 +466,9 @@ footer {
     background-color: lightyellow;
     height: 14vh;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .socials {
@@ -416,29 +480,30 @@ footer {
 .socials a {
     text-decoration: none;
     padding: 0 1% 0 1%;
+    margin-left: 10px;
 }
 
 .socials img {
-    width: 35px;
-    height: 35px;
+    width: 40px;
+    height: 40px;
     border-radius: 3px;
 }
 
 .wrapContact {
     display: flex;
     justify-content: space-around;
-    height: 45vh;
 }
 
 iframe {
     flex-basis: 60%;
+    height: 45vh;
 }
 
 .wrapDetails {
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     justify-content: center;
-
+    margin-top: 0;
 }
 
 /*-----------------------------------Media Queries------------------------------------------*/
@@ -549,6 +614,12 @@ iframe {
 
     .danceStyle {
         flex-basis: 100%;
+        margin: 0;
+        height: auto;
+    }
+
+    .danceStyle1, .danceStyle2, .danceStyle3, .danceStyle4, .danceStyle5, .danceStyle6 {
+        background-image: none;
     }
 
     /*NAVIGATION*/
@@ -630,7 +701,7 @@ iframe {
         width: 100%;
     }
 
-      .gallerySlides {
+    .gallerySlides {
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -696,6 +767,12 @@ iframe {
         display: flex;
         flex-direction: column;
         margin-bottom: 30px;
+    }
+
+    .contactDetailsIcons {
+        margin: 0;
+        padding: 5px 0;
+        transform: scale(1.5, 1.5);
     }
 
     /*Social Media*/
